<resources>
    <string name="app_name">盛夏雨微凉</string>
    <string-array name="title_array">
        <item>上映</item>
        <item>榜单</item>
        <item>我看</item>
    </string-array>
    <string-array name="title_detail">
        <item>介绍</item>
        <item>图片</item>
        <item>短评</item>
        <item>影评</item>
    </string-array>
    <string name="coming_soon">查看即将上映的影片</string>
    <string name="high_box_office">查看票房榜</string>
    <string name="top250">查看TOP250</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">加载更多</string>
    <string name="best">-----------------本周口碑榜----------------</string>
    <string name="input">输入电影名称</string>
    <string name="type">形式</string>
    <string name="location">地区</string>
    <string name="genre">类型</string>
    <string name="special">特色</string>
</resources>
