<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_movie_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:showDividers="middle"
        android:divider="@drawable/divider"
        tools:context="com.fjnu.zjf.movie.activities.MovieTagActivity">

        <HorizontalScrollView
            android:id="@+id/hScroll_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_hScroll_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/type" />
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/hScroll_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_hScroll_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/location" />
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/hScroll_genre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_hScroll_genre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/genre" />
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/hScroll_special"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/layout_hScroll_special"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_special"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/special" />
            </LinearLayout>
        </HorizontalScrollView>
        <ProgressBar
            android:id="@+id/pro_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>
        <com.fjnu.zjf.movie.widgets.AppendableListView
            android:id="@+id/lv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</ScrollView>