<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fjnu.zjf.movie.CollectionListFragment">

    <ProgressBar
        android:id="@+id/pro_bar"
        style="@android:style/Widget.Holo.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ScrollView
        android:id="@+id/scroll_collection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/best" />
            <com.fjnu.zjf.movie.widgets.AppendableGridView
                android:id="@+id/grid_best"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:numColumns="3" />

            <LinearLayout
                android:id="@+id/layout_more"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_more0"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:text="@string/high_box_office" />
            </LinearLayout>

            <com.fjnu.zjf.movie.widgets.AppendableGridView
                android:id="@+id/grid_high_box_office"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:numColumns="3"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/layout_more1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_more1"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:text="@string/top250" />

            </LinearLayout>

            <com.fjnu.zjf.movie.widgets.AppendableGridView
                android:id="@+id/grid_top250"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:numColumns="3"
                android:visibility="gone" />
            <include
                android:id="@+id/layout_footer"
                android:visibility="gone"
                layout="@layout/footer_listview_comments"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
